human-intervention-logs/com.google.cloud:google-cloud-spanner:6.116.1/gradle-test/gradle-test-2026-06-10T00-12-53-786310Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: com.google.cloud:google-cloud-spanner:6.116.1
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4478-ce959e43/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 5 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4478-ce959e43/tests/src/com.google.cloud/google-cloud-spanner/6.116.1/src/test/java/com_google_cloud/google_cloud_spanner/ClientSideStatementValueConvertersInnerCredentialsProviderConverterTest.java:13: error: cannot find symbol
import com.google.auth.oauth2.NoCredentials;
                             ^
  symbol:   class NoCredentials
  location: package com.google.auth.oauth2
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4478-ce959e43/tests/src/com.google.cloud/google-cloud-spanner/6.116.1/src/test/java/com_google_cloud/google_cloud_spanner/ClientSideStatementValueConvertersInnerCredentialsProviderConverterTest.java:31: error: cannot find symbol
            assertThat(options.getCredentials()).isInstanceOf(NoCredentials.class);
                                                              ^
  symbol:   class NoCredentials
  location: class ClientSideStatementValueConvertersInnerCredentialsProviderConverterTest
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4478-ce959e43/tests/src/com.google.cloud/google-cloud-spanner/6.116.1/src/test/java/com_google_cloud/google_cloud_spanner/ClientSideStatementValueConvertersInnerCredentialsProviderConverterTest.java:46: error: cannot find symbol
            return NoCredentials.getInstance();
                   ^
  symbol:   variable NoCredentials
  location: class TestCredentialsProvider
3 errors


FAILURE: [Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4478-ce959e43/tests/src/com.google.cloud/google-cloud-spanner/6.116.1/build/reports/problems/problems-report.html
Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4478-ce959e43/tests/src/com.google.cloud/google-cloud-spanner/6.116.1/src/test/java/com_google_cloud/google_cloud_spanner/ClientSideStatementValueConvertersInnerCredentialsProviderConverterTest.java:13: error: cannot find symbol
  import com.google.auth.oauth2.NoCredentials;
                               ^
    symbol:   class NoCredentials
    location: package com.google.auth.oauth2
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4478-ce959e43/tests/src/com.google.cloud/google-cloud-spanner/6.116.1/src/test/java/com_google_cloud/google_cloud_spanner/ClientSideStatementValueConvertersInnerCredentialsProviderConverterTest.java:31: error: cannot find symbol
              assertThat(options.getCredentials()).isInstanceOf(NoCredentials.class);
                                                                ^
    symbol:   class NoCredentials
    location: class ClientSideStatementValueConvertersInnerCredentialsProviderConverterTest
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4478-ce959e43/tests/src/com.google.cloud/google-cloud-spanner/6.116.1/src/test/java/com_google_cloud/google_cloud_spanner/ClientSideStatementValueConvertersInnerCredentialsProviderConverterTest.java:46: error: cannot find symbol
              return NoCredentials.getInstance();
                     ^
    symbol:   variable NoCredentials
    location: class TestCredentialsProvider
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
11 actionable tasks: 1 executed, 10 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4478-ce959e43/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for com.google.cloud:google-cloud-spanner:6.116.1 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
9 actionable tasks: 1 executed, 8 up-to-date
